--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,5 @@
+* Tue Feb 09 2016 - version 0.4.0
+- Depend on vpsadmin-client v2.2.0
+
 * Sat Jan 23 2016 - version 0.3.0
 - Depend on vpsadmin-client v2.1.0
