--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Mon Mar 21 2016 - version 0.5.0
+- Depend on vpsadmin-client v2.3.0
+
 * Tue Feb 09 2016 - version 0.4.0
 - Depend on vpsadmin-client v2.2.0
 
