--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Wed Jun 07 2017 - version 0.9.0
+- Depend on vpsadmin-client v2.8.0
+
 * Fri Feb 10 2017 - version 0.8.0
 - Fix arguments of client constructor
 - Add shortcut method VpsFree::Client.new
