--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Mon Nov 27 2017 - version 0.10.0
+- Depend on vpsadmin-client v2.9.1
+
 * Wed Jun 07 2017 - version 0.9.0
 - Depend on vpsadmin-client v2.8.0
 
