--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Sat Jul 11 2020 - version 0.12.0
+- Base on vpsadmin-client v3.0.0 pre-release
+
 * Fri May 17 2019 - version 0.11.0
 - Base on vpsadmin-client v3.0.0 pre-release
 
