--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Thu Dec 09 2021 - version 0.13.0
+- Base on vpsadmin-client 3.0.0.master.20211209-0.34bce62b
+
 * Sat Jul 11 2020 - version 0.12.0
 - Base on vpsadmin-client v3.0.0 pre-release
 
