--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fri Jan 07 2022 - version 0.14.0
+- Base on vpsadmin-client 3.0.0.master.20220107-0.57b7b680
+
 * Thu Dec 09 2021 - version 0.13.0
 - Base on vpsadmin-client 3.0.0.master.20211209-0.34bce62b
 
