--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fri Jan 21 2022 - version 0.15.0
+- Base on vpsadmin-client 3.0.0.master.20220121-0.b5a81113
+
 * Fri Jan 07 2022 - version 0.14.0
 - Base on vpsadmin-client 3.0.0.master.20220107-0.57b7b680
 
