--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Tue Aug 09 2022 - version 0.16.0
+- Base on vpsadmin-client 3.0.0.master.20220809-0.4bb004b0
+
 * Fri Jan 21 2022 - version 0.15.0
 - Base on vpsadmin-client 3.0.0.master.20220121-0.b5a81113
 
