--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fri Nov 18 2022 - version 0.17.0
+- Base on vpsadmin-client 3.0.0.master.20221118-0.99dcc6de
+
 * Tue Aug 09 2022 - version 0.16.0
 - Base on vpsadmin-client 3.0.0.master.20220809-0.4bb004b0
 
