--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fri Nov 18 2022 - version 0.17.1
+- Base on vpsadmin-client 3.0.0.master.20221118-1.ac358990
+
 * Fri Nov 18 2022 - version 0.17.0
 - Base on vpsadmin-client 3.0.0.master.20221118-0.99dcc6de
 
