--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+* Fri Dec 29 2023 - version 0.18.0
+- Base on vpsadmin-client 3.0.0.master.20231229-0.51d41b07
+
 * Fri Nov 18 2022 - version 0.17.1
 - Base on vpsadmin-client 3.0.0.master.20221118-1.ac358990
 
